Advanced/app-mesh/appmesh-alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /color
    kubernetes.io/ingress.class: alb
  name: colorgateway
  namespace: appmesh-demo
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: colorgateway
          servicePort: 9080
        path: /color
